# SCADA-Fault-Prediction

./: .gitignore  README.md  error.txt  long_output.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
autoencoder_results/asset_10/: cnn_lstm_autoencoder.keras  cnn_lstm_autoencoder_metrics.json  gru_autoencoder.keras  gru_autoencoder_metrics.json  lstm_autoencoder.keras
configs/: problem_v1.yaml
docs/: method_catalog.md
experiments/: RF_SMOTE.py  analyze_handoff_reconstruction_errors.py  kaggle_prepare_sequences.py  kaggle_test_lstm_ae_asset10.py  kaggle_train_sequence_models.py  kaggle_train_utils.py  plot_mse_timelines.py  train_autoencoder_batch.py  train_autoencoder_global.py  train_normal_behavior_handoff.py  tune_autoencoder_global.py  tune_autoencoder_threshold.py
notebooks/: kaggle_prepare_per_asset_autoencoder.py  kaggle_rf_smote_combined.py  kaggle_train_autoencoders.py  lstm.py  phase2_data_understanding_all_farms.py
reports/: capstone_project.md  care2compare_paper.md  classifier_training_models.md  deep-research-report.md  detection_recall_threshold_report.md  dl_detection_classifier_results_rewrite.md  feature_screening_report.md  paper_cnn_lstm_attention_extracted.txt  problem_definition.md  window_stride_survey.md
reports/phase2_data_understanding/: phase2_data_understanding_summary.md
results/ae_tuning_20260504/: run_summary.json
results/asset_0_results/: architecture.md  run_summary.json
results/bottleneck_32_8/: architecture.md  (+1 more)
src/: config.py  draw_architecture.py  fault_type_config.py  main.py  problem_config.py
(+1336 files in other folders)
