[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scada-fault-prediction"
version = "0.1.0"
description = "Wind turbine SCADA fault prediction project"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "joblib",
    "PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
